resolved passing vars and getting route

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         Begin: <input type="text" placeholder="place name or address" name="from" size="50" required><br>
         Destination: <input type="text" placeholder="place name or address" name="to" size="50" required><br>
         <input type="submit" value="Submit">
-      </form>       
+      </form>
+      <div id='itineraryDiv' style="position:relative; width:400px;"></div>       
    </body>
 </html>
