--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
    </head>
 
    <body>
-      <div id='mapDiv' style="position:relative; width:1000px; height:1000px;"></div>
+      <div id='mapDiv' style="position:relative; width:800px; height:800px;"></div>
       <form class="getInput" onsubmit="return false">
-        Begin: <input type="text" placeholder="place name or address" name="from" size="50" required><br>
-        Destination: <input type="text" placeholder="place name or address" name="to" size="50" required><br>
-        <input type="submit" value="Submit">
+        Starting: <input type="search" placeholder="place name or address" name="from" size="30" required><br>
+        Destination: <input type="search" placeholder="place name or address" name="to" size="30" required><br>
+        <input class="button" type="submit" value="Submit">
       </form>
       <div id='itineraryDiv' style="position:relative; width:400px;"></div>       
    </body>
