resolved clearing route upon input change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
    <head>
-      <title></title>
+      <title>Route Finder</title>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <link rel="stylesheet" href="css/style.css">
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -16,6 +16,6 @@
         Destination: <input type="search" placeholder="place name or address" name="to" size="30" required><br>
         <input class="button" type="submit" value="Submit">
       </form>
-      <div id='itineraryDiv' style="position:relative; width:400px;"></div>       
+      <div id='directionsDiv' style="position:relative; width:400px;"></div>       
    </body>
 </html>
