--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
       <script src="js/app.js"></script>
       <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
+      <!--<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>-->
+      <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
+<script src="http://js.arcgis.com/3.13/"></script>
    </head>
 
    <body>
