--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
    <body>
       <div id='mapDiv' style="position:relative; width:800px; height:800px;"></div>
       <form class="getInput" onsubmit="return false">
-        Starting: <input type="search" placeholder="place name or address" name="from" size="30" required><br>
-        Destination: <input type="search" placeholder="place name or address" name="to" size="30" required><br>
+        Optimization<br>
+        <input type="radio" class="routeOptimization" name="rtOpt" value="shortestTime" checked>Shorest Time<br>
+        <input type="radio" class="routeOptimization" name="rtOpt" value="shortestDistance">Shortest Distance<br>
+        Avoid Traffic<br>
+        <input type="radio" class="traffic" name="traffic" value="true" checked>Avoid Traffic<br>
+        <input type="radio" class="traffic" name="traffic" value="false">Traffic<br>
+        Begin: <input type="search" placeholder="place name or address" name="from" size="25" required><br>
+        End: <input type="search" placeholder="place name or address" name="to" size="25" required><br>
         <input class="button" type="submit" value="Submit">
       </form>
       <div id='directionsDiv' style="position:relative; width:400px;"></div>       
