--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div id='mapDiv' style="position:relative; width:800px; height:800px;"></div>
       <form class="getInput" onsubmit="return false">
         Optimization<br>
-        <input type="radio" class="routeOptimization" name="rtOpt" value="shortestTime" checked>Shorest Time<br>
-        <input type="radio" class="routeOptimization" name="rtOpt" value="shortestDistance">Shortest Distance<br>
-        Avoid Traffic<br>
-        <input type="radio" class="traffic" name="traffic" value="true" checked>Avoid Traffic<br>
-        <input type="radio" class="traffic" name="traffic" value="false">Traffic<br>
+        <input type="radio" name="rtOpt" value="shortestTime" checked>Shorest Time<br>
+        <input type="radio" name="rtOpt" value="shortestDistance">Shortest Distance<br>
+        Traffic<br>
+        <input type="radio" name="traffic" value="true" checked>Avoid Traffic<br>
+        <input type="radio" name="traffic" value="false">Traffic Ok<br>
         Begin: <input type="search" placeholder="place name or address" name="from" size="25" required><br>
         End: <input type="search" placeholder="place name or address" name="to" size="25" required><br>
         <input class="button" type="submit" value="Submit">
