--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
       <script src="js/app.js"></script>
       <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
-      <!--<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>-->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
       <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
 <script src="http://js.arcgis.com/3.13/"></script>
    </head>
@@ -15,12 +15,6 @@
    <body>
       <div id='mapDiv' style="position:relative; width:800px; height:800px;"></div>
       <form class="getInput" onsubmit="return false">
-        Optimization<br>
-        <input type="radio" name="rtOpt" value="shortestTime" checked>Shorest Time<br>
-        <input type="radio" name="rtOpt" value="shortestDistance">Shortest Distance<br>
-        Traffic<br>
-        <input type="radio" name="traffic" value="true" checked>Avoid Traffic<br>
-        <input type="radio" name="traffic" value="false">Traffic Ok<br>
         Begin: <input type="search" placeholder="place name or address" name="from" size="25" required><br>
         End: <input type="search" placeholder="place name or address" name="to" size="25" required><br>
         <input class="button" type="submit" value="Submit">
