working on adding popup (modal) for weather display

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         End: <input type="search" placeholder="place name or address" name="to" size="25" required><br>
         <input class="button" type="submit" value="Submit">
       </form>
-      <div id='directionsDiv' style="position:relative; width:400px;"></div>       
+      <div id='directionsDiv' style="position:relative; width:400px;"></div>
+      <a href="#openModal">Open Modal</a>
+      <div id="openModal" class="modalDialog">
+         <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal Box</h2>
+            <p></p>
+         </div>
+      </div>
    </body>
 </html>
