working on modal

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
       </form>
       <div id='directionsDiv' style="position:relative; width:400px;"></div>
 
-      <!-- <a href="#openModal" id="from-ajax" rel="modal:open">Show Weather</a> -->
+      <a href="#openModal" id="weatherModal" class="weather-off">Weather Modal</a>
+
       <div id="openModal" class="modalDialog">
          <div>
             <a href="#close" title="Close" class="close">X</a>
-            <p>conditions</p>
+            <h2>Weather Station Info</h2>
+            <p id="modal">This is a sample modal box that can be created using the powers of CSS3.</p>
          </div>
       </div>
    </body>
