swaped wunderground weather, both weather and route working

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </form>
       <div id='directionsDiv' style="position:relative; width:400px;"></div>
 
-      <a href="#openModal" id="weatherModal" class="weather-off">Weather Modal</a>
-
+      <a href="#openModal" id="weatherModal">Weather Modal</a>
       <div id="openModal" class="modalDialog">
          <div>
             <a href="#close" title="Close" class="close">X</a>
