functionality complete, needs some styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <form class="getInput" onsubmit="return false">
         Begin: <input type="search" placeholder="place name or address" name="from" size="25" required><br>
         End: <input type="search" placeholder="place name or address" name="to" size="25" required><br>
+        <div id="to_weather">
+        </div>
         <input class="button" type="submit" value="Submit">
       </form>
       <div id='directionsDiv' style="position:relative; width:400px;"></div>
