--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-   <head>
+  <head>
       <title>Route Finder</title>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <link rel="stylesheet" href="css/style.css">
@@ -10,9 +10,9 @@
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
       <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
       <script src="http://js.arcgis.com/3.13/"></script>
-   </head>
+  </head>
 
-   <body>
+  <body>
       <div id='mapDiv' style="position:relative; width:800px; height:800px;"></div>
       <form class="getInput" onsubmit="return false">
         Begin: <input type="search" placeholder="place name or address" name="from" size="25" required><br>
@@ -37,9 +37,9 @@
         <div>
           <div id="splash">
             <a href="#close_splash" title="Close Splash" class="close">X</a>
-            <p>Simple mapping application based on MS Bing Maps API. A routing utility is provided to identify the shortest route between a begin and end destination. Additionally, the user may click on the map and retreive weather related information for the location clicked on.</p>
+            <p>Simple mapping application based on the Bing Maps API. A routing utility is provided to identify the shortest route between a begin and end destination. Route destination weather will display. Additionally, the user may click on the map and retreive weather related information, in a modal popup, for the location clicked on. </p>
           </div>
         </div>
       </div>
-   </body>
+  </body>
 </html>
