cursor styling and more

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <script src="js/app.js"></script>
       <script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-      <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
-      <script src="http://js.arcgis.com/3.13/"></script>
+<!--       <link rel="stylesheet" href="http://js.arcgis.com/3.13/esri/css/esri.css">
+      <script src="http://js.arcgis.com/3.13/"></script> -->
   </head>
 
   <body>
